--- a/Solving a Sudoku with AI - Lessons Problem.ipynb
+++ b/Solving a Sudoku with AI - Lessons Problem.ipynb
@@ -1256,11 +1256,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original Sudoku board is **********************************************\n",
+      "    4     123456789 123456789 |123456789 123456789 123456789 |    8     123456789     5     \n",
+      "123456789     3     123456789 |123456789 123456789 123456789 |123456789 123456789 123456789 \n",
+      "123456789 123456789 123456789 |    7     123456789 123456789 |123456789 123456789 123456789 \n",
+      "------------------------------+------------------------------+------------------------------\n",
+      "123456789     2     123456789 |123456789 123456789 123456789 |123456789     6     123456789 \n",
+      "123456789 123456789 123456789 |123456789     8     123456789 |    4     123456789 123456789 \n",
+      "123456789 123456789 123456789 |123456789     1     123456789 |123456789 123456789 123456789 \n",
+      "------------------------------+------------------------------+------------------------------\n",
+      "123456789 123456789 123456789 |    6     123456789     3     |123456789     7     123456789 \n",
+      "    5     123456789 123456789 |    2     123456789 123456789 |123456789 123456789 123456789 \n",
+      "    1     123456789     4     |123456789 123456789 123456789 |123456789 123456789 123456789 \n",
+      "values*****************\n",
+      "   4      1679   12679  |  139     2369    1269  |   8      1239     5    \n",
+      " 26789     3    1256789 | 14589   24569  1245689 | 12679    1249   124679 \n",
+      "  2689   15689   125689 |   7     234569 1245689 | 12369   12349   123469 \n",
+      "------------------------+------------------------+------------------------\n",
+      "  3789     2     135789 |  3459   34579    4579  | 13579     6     13789  \n",
+      "  3679   15679   135679 |  359      8     25679  |   4     12359   12379  \n",
+      " 36789   456789  356789 |  3459     1     245679 | 23579   23589   23789  \n",
+      "------------------------+------------------------+------------------------\n",
+      "  289      89     289   |   6      459      3    |  1259     7     12489  \n",
+      "   5      6789   36789  |   2      479    14789  |  1369   13489   134689 \n",
+      "   1      6789     4    |  589     579     5789  | 23569   23589   23689  \n",
+      "new values*****************\n",
+      "   4      1679   12679  |  139     2369    1269  |   8      1239     5    \n",
+      " 26789     3    1256789 | 14589   24569  1245689 | 12679    1249   124679 \n",
+      "  2689   15689   125689 |   7     234569 1245689 | 12369   12349   123469 \n",
+      "------------------------+------------------------+------------------------\n",
+      "  3789     2     135789 |  3459   34579    4579  | 13579     6     13789  \n",
+      "  3679   15679   135679 |  359      8     25679  |   4     12359   12379  \n",
+      " 36789     4     356789 |  3459     1     245679 | 23579   23589   23789  \n",
+      "------------------------+------------------------+------------------------\n",
+      "  289      89     289   |   6      459      3    |  1259     7     12489  \n",
+      "   5      6789     3    |   2      479      1    |  1369   13489   134689 \n",
+      "   1      6789     4    |  589     579     5789  | 23569   23589   23689  \n",
+      "values*****************\n",
+      "   4      1679   12679  |  139     2369    269   |   8      1239     5    \n",
+      " 26789     3    1256789 | 14589   24569   245689 | 12679    1249   124679 \n",
+      "  2689   15689   125689 |   7     234569  245689 | 12369   12349   123469 \n",
+      "------------------------+------------------------+------------------------\n",
+      "  3789     2     15789  |  3459   34579    4579  | 13579     6     13789  \n",
+      "  3679   15679   15679  |  359      8     25679  |   4     12359   12379  \n",
+      " 36789     4     56789  |  359      1     25679  | 23579   23589   23789  \n",
+      "------------------------+------------------------+------------------------\n",
+      "  289      89     289   |   6      459      3    |  1259     7     12489  \n",
+      "   5      6789     3    |   2      479      1    |   69     489     4689  \n",
+      "   1      6789     4    |  589     579     5789  | 23569   23589   23689  \n",
+      "new values*****************\n",
+      "   4      1679   12679  |  139     2369    269   |   8      1239     5    \n",
+      " 26789     3    1256789 | 14589   24569   245689 | 12679    1249   124679 \n",
+      "  2689   15689   125689 |   7     234569  245689 | 12369   12349   123469 \n",
+      "------------------------+------------------------+------------------------\n",
+      "  3789     2     15789  |  3459   34579    4579  | 13579     6     13789  \n",
+      "  3679   15679   15679  |  359      8     25679  |   4     12359   12379  \n",
+      " 36789     4     56789  |  359      1     25679  | 23579   23589   23789  \n",
+      "------------------------+------------------------+------------------------\n",
+      "  289      89     289   |   6      459      3    |  1259     7     12489  \n",
+      "   5      6789     3    |   2      479      1    |   69     489     4689  \n",
+      "   1      6789     4    |  589     579     5789  | 23569   23589   23689  \n",
+      "No Update True\n",
+      "\n",
+      "\n",
+      "After applying constrint propagaton (both eliminate and only_choice strategies)*****************\n",
+      "   4      1679   12679  |  139     2369    269   |   8      1239     5    \n",
+      " 26789     3    1256789 | 14589   24569   245689 | 12679    1249   124679 \n",
+      "  2689   15689   125689 |   7     234569  245689 | 12369   12349   123469 \n",
+      "------------------------+------------------------+------------------------\n",
+      "  3789     2     15789  |  3459   34579    4579  | 13579     6     13789  \n",
+      "  3679   15679   15679  |  359      8     25679  |   4     12359   12379  \n",
+      " 36789     4     56789  |  359      1     25679  | 23579   23589   23789  \n",
+      "------------------------+------------------------+------------------------\n",
+      "  289      89     289   |   6      459      3    |  1259     7     12489  \n",
+      "   5      6789     3    |   2      479      1    |   69     489     4689  \n",
+      "   1      6789     4    |  589     579     5789  | 23569   23589   23689  \n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Exercise5.1: Try to solve harder sudoku using the same constraint propagation\n",
@@ -1320,15 +1400,67 @@
     "        - keys: Box labels, e.g. 'A1'\n",
     "        - values: Value in corresponding box, e.g. '8', or '123456789' if it is empty.\n",
     "    \"\"\"\n",
+    "    assert len(grid) == 81, 'Input may wrong, please check again'\n",
     "    \n",
-    "    ''' Your solution here \n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
+    "    row_units_long = sum(row_units,[]) # concatenate each list of row_units to 1 long list\n",
+    "    all_num = '123456789'\n",
+    "    \n",
+    "    boxesVal = dict([(row_units_long[k[0]], k[1] if k[1] != '.' else all_num ) for k in enumerate(grid)])\n",
+    "    \n",
+    "    return boxesVal\n",
+    "\n",
+    "#########################\n",
+    "def used_nums(values):\n",
+    "    import math\n",
     "    '''\n",
+    "    This method will search number that is used in specific rows, columns or square\n",
+    "    and store it in the dictionary. for example\n",
+    "    {'A':[3, 2, 6],..., 1:[9, 7, 8], ..., (1,1):[1, 3, 9], ...} ; (1,1) refer to square of row 1 column 1\n",
+    "\n",
+    "    It means that row 'A' (length = 9) have already existing value of 3, 2 and 6\n",
+    "    Column 1 have already existing value of 9, 7, 8\n",
+    "    square (1,1) have already existing value of 1, 3, 9\n",
+    "\n",
+    "   How to apply: Use first letter of boxes index to indicate which row that this index are in,\n",
+    "   second letter for indicate column and both to indicate which square unit. For example, \n",
+    "   'B3' == > 'B' indicate that this index is in second row, 3 indicate third column, \n",
+    "   'B' convert to 1, 3 convert to 1 indicate that this index is in square (1,1)\n",
+    "\n",
+    "   So, 'B3' values must not similar to those existing in dict['B'], dict['3'] and dict[(1,1)]\n",
+    "\n",
+    "    Input: dict values\n",
+    "    Output: dict used_values\n",
+    "    '''\n",
+    "\n",
+    "    used = {}\n",
+    "\n",
+    "    rowLetter = ['A','B','C','D','E','F','G','H','I']\n",
+    "    # initiate output dictionary\n",
+    "    for i in range(1, 10):\n",
+    "        used[i] = []\n",
+    "        used[chr(i + 64)] = []\n",
+    "\n",
+    "    # initiate square input\n",
+    "    for i in range(1,4):\n",
+    "        for k in range(1,4):\n",
+    "            used[(i,k)] = []\n",
+    "\n",
+    "    # create dict used_values\n",
+    "    for i in range(1,10):\n",
+    "        for letter in rowLetter:\n",
+    "            in_let = math.ceil((ord(letter) - ord('A') + 1)/3) # convert row 'A', 'B', 'C' to int 1 \n",
+    "            in_num = math.ceil(i/3)                            # convert column 1, 2, 3 to int 1\n",
+    "            index_sq = (in_let, in_num)\n",
+    "\n",
+    "            index = letter + str(i)\n",
+    "            if len(values[index]) == 1:\n",
+    "                used[index[0]].append(values[index]) # insert existing values\n",
+    "                used[int(index[1])].append(values[index])\n",
+    "                used[index_sq].append(values[index])\n",
+    "\n",
+    "    return used\n",
+    "    ######## end method used_nums ##########\n",
+    "########################\n",
     "\n",
     "def eliminate(values):\n",
     "    \"\"\"Eliminate values from peers of each box with a single value.\n",
@@ -1341,17 +1473,33 @@
     "    Returns:\n",
     "        Resulting Sudoku in dictionary form after eliminating values.\n",
     "    \"\"\"\n",
+    "    import math\n",
     "    \n",
-    "    ''' Your solution here \n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    '''\n",
+    "    ## begin eleminate function ##\n",
+    "    u_values = used_nums(values)\n",
+    "    \n",
+    "    # loop through all index in boxes and identify possible value in each index\n",
+    "    available_values = values.copy()\n",
+    "    for index in values.keys():\n",
+    "        \n",
+    "        # if this index don't have unique value, identify possible values\n",
+    "        if len(values[index]) > 1:\n",
+    "            pos_val = values[index]\n",
+    "            \n",
+    "            index_row = index[0]\n",
+    "            index_col = int(index[1])\n",
+    "            index_sq = (math.ceil((ord(index[0])-64)/3), math.ceil(index_col/3))\n",
     "\n",
-    "def only_choice(values):\n",
+    "            # call used values from dict u_values and subtract from all possible values\n",
+    "            # the remainder are available values for each index!\n",
+    "            available_values[index] = list(set(list(pos_val)) - set(u_values[index_row] + u_values[index_col] + u_values[index_sq]))\n",
+    "            available_values[index] = ''.join(sorted(available_values[index]))\n",
+    "            \n",
+    "    return available_values\n",
+    "\n",
+    "def only_choice(values_copy):\n",
+    "    import numpy as np\n",
+    "    \n",
     "    \"\"\"Finalize all values that are the only choice for a unit.\n",
     "\n",
     "    Go through all the units, and whenever there is a unit with a value\n",
@@ -1361,14 +1509,34 @@
     "    Output: Resulting Sudoku in dictionary form after filling in only choices.\n",
     "    \"\"\"\n",
     "    \n",
-    "    ''' Your solution here \n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    '''\n",
+    "    values = values_copy.copy()\n",
+    "    \n",
+    "    # loop through each square\n",
+    "    for sq in square_units:\n",
+    "        replicate_val = []\n",
+    "        index_NonUniq = [] # store index non unique\n",
+    "        \n",
+    "        # loop through each element in a square and store all possible values\n",
+    "        # from the value that have more than 1 digit\n",
+    "        for index in sq:\n",
+    "            replicate_val.extend(list(values[index]))\n",
+    "            index_NonUniq.append(index) \n",
+    "        \n",
+    "        # find the unique values\n",
+    "        uniq_val = []\n",
+    "        for k in set(replicate_val):\n",
+    "            if replicate_val.count(k) == 1:\n",
+    "                uniq_val.append(k)\n",
+    "        \n",
+    "        # indicate index of unique values and replace value in that index\n",
+    "        for index in index_NonUniq:\n",
+    "            for u in uniq_val:\n",
+    "                # if unique vales is in this index, replace possible value with unique values\n",
+    "                # and remove this index out of index_NonUniq\n",
+    "                if u in values[index]:  \n",
+    "                    values[index] = u\n",
+    "                    index_NonUniq.remove(index)\n",
+    "    return values\n",
     "\n",
     "#2. function.py ----------------------------\n",
     "# 2.1 combine the functions eliminate and only_choice to write the function reduce_puzzle\n",
@@ -1382,14 +1550,55 @@
     "    Output: The resulting sudoku in dictionary form.\n",
     "    \"\"\"\n",
     "    \n",
-    "    ''' Your solution here \n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    .........\n",
-    "    '''\n",
+    "    def check_complete_sudoku(values):\n",
+    "        '''\n",
+    "        This method will check that this sudoku are complete or not\n",
+    "        \n",
+    "        Input: Dictionary Sudoku\n",
+    "        Output: Boolean out\n",
+    "        '''\n",
+    "        \n",
+    "        used_values = used_nums(values) # identify values that already used\n",
+    "        \n",
+    "        for key in used_values.keys():\n",
+    "            if len(used_values[key]) != 9: # if used value not equal to 9 numbers return false\n",
+    "                return False\n",
+    "            for k in range(1,10):      # if used values are 9 numbers but not an numerical order 1,2,..,9 => return False \n",
+    "                if str(k) not in used_values[key]:\n",
+    "                    return False\n",
+    "                    \n",
+    "        \n",
+    "        return True\n",
+    "    ############# end check_complete_sudoku ##################\n",
+    "    \n",
+    "    no_update = False\n",
+    "    while not no_update:\n",
+    "    \n",
+    "        # eliminate until values cannot be eleminate\n",
+    "        while eliminate(values) != values:\n",
+    "            values = eliminate(values)       # eliminate values\n",
+    "        \n",
+    "        # fill only choices\n",
+    "        new_values = only_choice(values)\n",
+    "        print('values*****************')\n",
+    "        display(values)\n",
+    "        print('new values*****************')\n",
+    "        display(new_values)\n",
+    "        \n",
+    "        if '' in new_values.values():\n",
+    "            print('Error, There is empty possible values in some index')\n",
+    "            return False\n",
+    "        \n",
+    "        if check_complete_sudoku(new_values):\n",
+    "            print('Complete', check_complete_sudoku(new_values))\n",
+    "            return new_values\n",
+    "        \n",
+    "        no_update = values == new_values\n",
+    "        values = new_values.copy()\n",
+    "    \n",
+    "    print('No Update', no_update)\n",
+    "    return new_values\n",
+    "################ end reduce_puzzle ########################\n",
     "\n",
     "#3. Test utils.py ----------------------------  \n",
     "grid_easy = '..3.2.6..9..3.5..1..18.64....81.29..7.......8..67.82....26.95..8..2.3..9..5.1.3..'\n",
